fix alignment for actor and director cards

--- a/src/components/Actor/Actor.css
+++ b/src/components/Actor/Actor.css
@@ -7,17 +7,20 @@
     display: grid;
     grid-template-columns: auto auto;
     padding: 16px;
-    grid-row-gap: 8px;
+    justify-content: space-between;
 }
 
 .actor-card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 130px;
+    margin-bottom: 20px;
+    border-radius: 10px;
   }
   .actor-card img{
       width:100%;
       min-height: 60%;
+      border-radius: 10px 10px 0px 0px;
   }
   
   .actor-card:hover {
