--- a/src/components/Movie/MovieInfo/MovieInfo.css
+++ b/src/components/Movie/MovieInfo/MovieInfo.css
@@ -67,7 +67,7 @@
     display: grid;
     grid-template-columns: auto auto;
     padding: 16px;
-    grid-row-gap: 8px;
+    justify-content: space-between;
 }
 
 
@@ -75,10 +75,14 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 130px;
+    height: 270px;
+    margin-bottom: 20px;
+    border-radius: 10px;
   }
   .movieInfo-directors-card img{
       width:100%;
-      min-height: 60%;
+      min-height: 200px;
+      border-radius: 10px 10px 0px 0px;
   }
   
   .movieInfo-directors-card:hover {
